--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 # Logs
+README.md
+dist/
+.htaccess
 logs
 *.log
 npm-debug.log*
@@ -8,7 +11,9 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
-dist
+README.md
+ # Ignore README file
+dist-ssr
 dist-ssr
 *.local
 
